[package]
name = "tuddy"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
axum = "0.8.9"
sqlx = { version = "0.9.0", features = [
  "chrono",
  "postgres",
  "uuid",
  "macros",
  "runtime-tokio",
  "tls-rustls",
] }
dotenvy = "0.15.7"
regex = "1.12.4"
argon2 = "0.6.0-rc.8"
hex = "0.4.3"
rand = "0.10.2"
thiserror = "2.0.18"
chrono = "0.4.45"
keyring = "4.1.2"
serde_json = "1.0.150"
aes-gcm = "0.11.0"
